--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Giman Nikolay",
-            "email": ""
+            "email": "gimanhead@gmail.com"
         }
     ],
     "minimum-stability": "alpha",
