--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "gimanhead@gmail.com"
         }
     ],
-    "minimum-stability": "alpha",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "ZXC\\": "src/ZXC"
