--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.5.4"
     }
 }
