--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require": {
         "php": ">=8.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ralouphie/getallheaders": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.4"
